.depreciated/bootstrap/dep-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.cagou.ovh`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.cagou.ovh`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    # - hosts:
    #   - argocd.cagou.ovh
    #   secretName: argocd-secret
    certResolver: default
    # certResolver: letsencrypt
    # certResolver: myresolver
    # secretName: argocd-tls

# https://doc.traefik.io/traefik/routing/providers/kubernetes-crd/
